[project]
name = "hyperdrivepy"
version = "1.0.4"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/delvtech/hyperdrive-bindings"
Issues = "https://github.com/delvtech/hyperdrive-bindings/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--tb=short"]
norecursedirs = ".git examples hyperdrive"
python_files = ["*_test.py", "*_tests.py"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pylint.MASTER]
ignore = [
  "hyperdrive",
  ".venv",
  ".vscode",
  "docs",
  "pypechain_types"
]
notes = ["FIXME"]
max-line-length = 120
ignore-docstrings = 'no'
ignore-imports = 'no'
disable='duplicate-code'
extension-pkg-allow-list="hyperdrivepy"

[tool.pyright]
include = ["crates/hyperdrivepy"]
exclude = [
  "hyperdrive",
  ".venv",
  ".vscode",
  "docs",
  "**/pypechain_types",
  "**/__pycache__"
]
reportMissingImports = false