[project]
name = "hyperdrive_py"
version = "0.3.0"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.pylint]
extension-pkg-allow-list="hyperdrive_py"

[tool.setuptools.packages.find]
where = ["python", "src"]
