[package]
name = "hyperdrivepy"
edition = "2021"
version = "0.13.0"
authors = [
    "Dylan Paiton",
    "Matt Brown",
    "Sheng Lundquist",
]
description = "Python wrappers for the Hyperdrive AMM"

[lib]
name = "hyperdrivepy"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ethers = "2.0.8"
eyre = "0.6.8"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

fixed-point = { version = "0.1.0", path = "../../hyperdrive/crates/fixed-point" }
fixed-point-macros = { version = "0.1.0", path = "../../hyperdrive/crates/fixed-point-macros" }
hyperdrive-math = { version = "0.1.0", path = "../../hyperdrive/crates/hyperdrive-math" }
hyperdrive-wrappers = { version = "0.1.0", path = "../../hyperdrive/crates/hyperdrive-wrappers" }
pyo3 = { version = "0.19.0", features = ["abi3-py37"] }
