[project]
name = "hyperdrivepy"
version = "0.9.0"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/delvtech/hyperdrive-bindings"
Issues = "https://github.com/delvtech/hyperdrive-bindings/issues"

[tool.setuptools.packages.find]
where = ["python", "src"]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust", "maturin>=1.5"]
build-backend = "maturin"
