[project]
name = "hyperdrivepy"
version = "0.13.0"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/delvtech/hyperdrive-bindings"
Issues = "https://github.com/delvtech/hyperdrive-bindings/issues"

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python", "src"]
